# game2notion

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  TODO.md  config.py  conftest.py  daily_game_records.py  game2notion.py  notion_game_list.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml  deploy.yml
docs/: DEVELOPMENT.md  OPTIMIZATION_SUMMARY.md
gameplatform/: steam.py
src/: __init__.py  config.py  migrate_playtime_to_minutes.py  notion_game_list.py  utils.py
tests/: __init__.py  test_platforms.py
